# memtraq

./: .gitignore  README.md  configure.ac  memtraq.pl  udp-logger.pl
include/: memtraq.h
m4/: .gitignore
src/: Makefile.am  clist.h  cxxsupport.cpp  hooks.cpp  internal.h  lmm.c  lmm.h  memtraq.c  memtraq.trc  trace.c  trace.h  vsnprintf.c
